# fxt-cpp

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: commit.yaml  release.yaml  test.yaml
include/fxt/: defines.h  err.h  event_args.h  record_args.h  writer.h
include/fxt/internal/: constants.h  defines.h  fields.h  pairs.h  writer-impl.h
src/: CMakeLists.txt  constants.h  event_args.cpp  fields.h  fxt.cpp  fxt.h  record_args.h  writer.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  main.cpp  write.cpp  writer_test.h  writer_validation.h
